# Portal2D

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  linuxSetup.sh  windowsSetup.sh
conan_profiles/: windows
shaders/: default.frag  default.vert
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectRegistry.cpp  GameObjectRegistry.h  Physics.cpp  Physics.h  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
